--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
-    "discord.js": "^14.14.0",
-    "express": "^4.18.2",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
+    "@octokit/auth-app": "^6.0.1",
     "@octokit/rest": "^19.0.13",
-    "@octokit/auth-app": "^6.0.1"
+    "@types/body-parser": "^1.19.5",
+    "body-parser": "^1.20.2",
+    "discord.js": "^14.14.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
